tests/parsing/smtlib/v2.6/errors/025_var_binding_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/025_var_binding_bad_name_1.smt2", line 2, character 15-16:
2 | (assert (let ((_ 42)) true))
                   ^
Error while parsing a variable binding, read the reserved word '_',
      but expected a symbol (i.e. variable name).
